## DEV CHANGELOG ##
+ : Add
* : Fix, improved
- : Removed
& : To do
$ : New bug

## Version 1: 24/04/17 ##
+ Button class
+ Application class (motehr of Interface)
+ Cell 
+ Grid (Still hexagones calculations to do)
+ Theme
+ Utils
$ Apply label to window makes an unknow crash

## Version 2: 24/04/17 ##
+ Grid working

## Version 3: 24/04/17 ##
+ Cell light color

## Version 4: ../../.. ##
& Method isOnCell
	- Change cell light if on the cell
& Fix bug font
& Fix button update